--- a/english/thesis/pres/Makefile
+++ b/english/thesis/pres/Makefile
@@ -6,10 +6,10 @@ html:
 	docker run --rm $(COMMON_PARAMS) marpteam/marp-cli --html --allow-local-files pres.md
 
 pdf:
-	docker run --rm --init $(COMMON_PARAMS) marpteam/marp-cli pres.md --pdf --allow-local-files
+	docker run --rm --init $(COMMON_PARAMS) marpteam/marp-cli pres.md --html --pdf --allow-local-files
 
 watch:
 	docker run --rm --init $(COMMON_PARAMS) -p 37717:37717 marpteam/marp-cli -w --html pres.md
 
 server:
-	docker run --rm --init $(COMMON_PARAMS) -p 8080:8080 -p 37717:37717 marpteam/marp-cli -s
+	docker run --rm --init $(COMMON_PARAMS) -p 8080:8080 -p 37717:37717 marpteam/marp-cli -s . --html
